--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "@tailwindcss/typography"
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+}
+
+.markdown a {
+  @apply text-blue-500
+}
+
+.markdown a:hover {
+  @apply underline;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -80,3 +89,4 @@
     @apply bg-background text-foreground;
   }
 }
+
