--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 }
 
 .markdown a {
-  @apply text-blue-500
+  @apply text-slate-500
 }
 
 .markdown a:hover {
@@ -53,6 +53,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -85,8 +86,8 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
-
